# EdgeVoice

./: .cursorrules  .gitignore  4D_MATMUL_MODIFICATION_SUMMARY.md  AUGMENT_REFACTOR_SUMMARY.md  EdgeVoice_方案设计文档.md  GE2E_IMPLEMENTATION_SUMMARY.md  PADDED_OUTPUT_SUMMARY.md  README.md  README_DEPLOYMENT_OPTIMIZATION.md  README_GE2E.md  README_STREAMING_CONFORMER.md  README_augmentation.md  Readme.md  analyze_model.py  asr.md  audio_augmentation.py  audio_preprocessing.py  augment_voice.py  augmented_dataset.py  chunk_size_optimization_results.csv  config.py  convert_to_onnx.py  data_utils.py  demo.py  deployment_requirements.md  evaluate.py  example_progressive_streaming_training.py  export_onnx.py  export_optimized_onnx.py  feature_extraction.py  inference.py  prepare_streaming_dataloader  real_time_streaming_demo.py  realtime_inference.py  requirements.txt  run_streaming_conformer.sh  run_streaming_train_eval.sh  streaming_dataset.py  streaming_demo.py  streaming_evaluation.py  (+12 more)
.cursor/rules/: rules-from-x.mdc
data_collection_tool/: README.md  data_stats.py
deployed_models/: model_info.txt
deployment/: CMakeLists.txt  README.md
deployment/include/: audio_processor.h  inference_engine.h
deployment/src/: audio_processor.cpp  inference_engine.cpp  main.cpp
deployment/tools/: model_converter.py  performance_tester.py
deployment/utils/: model_converter.py  performance_tester.py
docs/: EdgeVoice_ASR方案选型与实施.md  EdgeVoice_技术方案详细说明.md  EdgeVoice_方案设计文档.md  RAT材料.md  asr.md  background.md  limits.md  progressive_streaming_training.md  solution_summaries.md  一期数据训练情况.md  二期数据训练情况.md  数据采集计划.md  调优计划.md  音频处理流程.md
docs/config/: edgevoice_data_flow.md  latency_analysis.md  optimize.md  parameters.md
examples/: ge2e_example.py
models/: asr_train.py  fast_classifier.py  ge2e_loss.py  precise_classifier.py  streaming_conformer.py  wenet_asr.py
tools/: audio_utilities.py  data_collection_tool.py  download_model.py  evaluate_asr.py  intent_prompts.py  prepare_asr_data.py  prompt_generator.py  run_tool.py
utils/: asr_utils.py  feature_augmentation.py  feature_extraction.py  progressive_streaming_trainer.py
